RESOLVED FIXED277472
[UnifiedPDF] UnifiedPDF::setNeedsRepaintInDocumentRects() is not needed
https://bugs.webkit.org/show_bug.cgi?id=277472
Summary [UnifiedPDF] UnifiedPDF::setNeedsRepaintInDocumentRects() is not needed
Abrar Rahman Protyasha
Reported 2024-07-31 23:57:31 PDT
This method was removed in 279127@main, but re-introduced (without any callers) in 281282@main. Let's remove it since it is redundant.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-31 23:57:40 PDT
Abrar Rahman Protyasha
Comment 2 2024-08-01 00:13:18 PDT
EWS
Comment 3 2024-08-01 02:02:20 PDT
Committed 281695@main (400d2953ec0a): <https://commits.webkit.org/281695@main> Reviewed commits have been landed. Closing PR #31585 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.