[UnifiedPDF] UnifiedPDF::setNeedsRepaintInDocumentRects() is not needed https://bugs.webkit.org/show_bug.cgi?id=277472 rdar://132964971

Reviewed by Charlie Wolfe.

This method was removed in 279127@main, but re-introduced (without any
callers) in 281282@main. This patch removes it since it is redundant.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::setNeedsRepaintInDocumentRects): Deleted.
(WebKit::UnifiedPDFPlugin::nearestPageIndexForDocumentPoint const): Deleted.
(WebKit::UnifiedPDFPlugin::pageIndexForDocumentPoint const): Deleted.

Canonical link: https://commits.webkit.org/281695@main